Bug 826695 - Fix developer toolbar button alignment, r=dao a=bbajaj

--- a/browser/themes/winstripe/browser.css
+++ b/browser/themes/winstripe/browser.css
@@ -2952,6 +2952,10 @@ html|*#gcli-output-frame {
   display: none;
 }
 
+#developer-toolbar-toolbox-button > .toolbarbutton-icon {
+  -moz-margin-end: 0;
+}
+
 .developer-toolbar-button {
   -moz-appearance: none;
   min-width: 78px;
